feat: reload an app
- Added /api/{app}/reload
- Added `miasma apps:reload`
- Reload the app when updating the routing
