# internal/server/gen/restapi/operations/reload_app.go
@@ -1,0 +1,58 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime/middleware"
+)
+
+// ReloadAppHandlerFunc turns a function with the right signature into a reload app handler
+type ReloadAppHandlerFunc func(ReloadAppParams) middleware.Responder
+
+// Handle executing the request and returning a response
+func (fn ReloadAppHandlerFunc) Handle(params ReloadAppParams) middleware.Responder {
+	return fn(params)
+}
+
+// ReloadAppHandler interface for that can handle valid reload app params
+type ReloadAppHandler interface {
+	Handle(ReloadAppParams) middleware.Responder
+}
+
+// NewReloadApp creates a new http.Handler for the reload app operation
+func NewReloadApp(ctx *middleware.Context, handler ReloadAppHandler) *ReloadApp {
+	return &ReloadApp{Context: ctx, Handler: handler}
+}
+
+/*ReloadApp swagger:route POST /api/apps/{appName}/reload reloadApp
+
+Reload
+
+*/
+type ReloadApp struct {
+	Context *middleware.Context
+	Handler ReloadAppHandler
+}
+
+func (o *ReloadApp) ServeHTTP(rw http.ResponseWriter, r *http.Request) {
+	route, rCtx, _ := o.Context.RouteInfo(r)
+	if rCtx != nil {
+		r = rCtx
+	}
+	var Params = NewReloadAppParams()
+
+	if err := o.Context.BindValidRequest(r, route, &Params); err != nil { // bind params
+		o.Context.Respond(rw, r, route.Produces, route, err)
+		return
+	}
+
+	res := o.Handler.Handle(Params) // actually handle the request
+
+	o.Context.Respond(rw, r, route.Produces, route, res)
+
+}
